Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,16 +44,76 @@
 <h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>usage</h2>
 
-<div class="highlight highlight-bash"><pre>./vim-install <span class="o">[</span>TARGET_VERSION<span class="o">]</span>
+<div class="highlight highlight-bash"><pre>./vim-install <span class="o">[</span>COMMAND<span class="o">]</span> <span class="o">[</span>TARGET_VERSION<span class="o">]</span>
+
+<span class="nv">COMMAND</span> <span class="o">=</span> clean <span class="p">|</span> install <span class="p">|</span> update <span class="p">|</span> build <span class="p">|</span> versions
 </pre></div>
 
 <h2>
 <a name="build-example" class="anchor" href="#build-example"><span class="octicon octicon-link"></span></a>build example</h2>
 
+<p>easy install</p>
+
 <div class="highlight highlight-bash"><pre><span class="nv">$ </span>git clone https://github.com/roadman/vimbuild.git
 <span class="nv">$ </span><span class="nb">cd </span>vimbuild
 <span class="nv">$ </span>./vim-install 7.4
 <span class="nv">$ </span><span class="nb">echo</span> <span class="s1">'export PATH="$HOME/vimbuild/build/7.4/vim74/src/:$PATH"'</span> &gt;&gt; <span class="nv">$HOME</span>/.bashrc
+</pre></div>
+
+<p>version list</p>
+
+<div class="highlight highlight-bash"><pre><span class="nv">$ </span>./vim-install versions
+3.0
+4.6
+5.0
+5.1
+5.3-rt
+5.3-src
+5.4-rt
+5.4-src
+5.5-rt
+5.5-src
+5.6-rt
+5.6-src
+5.7-rt
+5.7-src
+5.8-rt
+5.8-src
+6.0-rt1
+6.0-rt2
+6.0-src1
+6.0-src2
+6.0
+6.1-rt1
+6.1-rt2
+6.1-src1
+6.1-src2
+6.1
+6.1
+6.1
+6.1
+6.1
+6.1
+6.2-rt1
+6.2-rt2
+6.2-src1
+6.2-src2
+6.2
+6.3-rt1
+6.3-rt2
+6.3-src1
+6.3-src2
+6.3
+6.4-rt1
+6.4-rt2
+6.4-src1
+6.4-src2
+6.4
+7.0
+7.1
+7.2
+7.3
+7.4
 </pre></div>
       </section>
 
